--- a/app/src/main/res/layout/homemain.xml
+++ b/app/src/main/res/layout/homemain.xml
@@ -128,7 +128,7 @@
                 app:layout_constraintLeft_toRightOf="@+id/librarybtn"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/setting" />
+                app:srcCompat="@drawable/setting_new" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
