--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="midgreen">#9FD18C</color>
     <color name="graygreen">#DEE5E0</color>
+    <color name="bg_color">#F7FFF0</color>
 </resources>
