--- a/app/src/main/res/layout/pickmusic.xml
+++ b/app/src/main/res/layout/pickmusic.xml
@@ -10,7 +10,9 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/ingmusic"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent">
+        app:layout_constraintRight_toRightOf="parent"
+
+        app:layout_constraintVertical_weight="0.14">
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -22,7 +24,9 @@
         app:layout_constraintTop_toBottomOf="@+id/picktop"
         app:layout_constraintBottom_toTopOf="@+id/variation_music"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent">
+        app:layout_constraintRight_toRightOf="parent"
+
+        app:layout_constraintVertical_weight="0.14">
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -34,7 +38,9 @@
         app:layout_constraintTop_toBottomOf="@+id/picktop"
         app:layout_constraintBottom_toTopOf="@+id/iconlayout"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent">
+        app:layout_constraintRight_toRightOf="parent"
+
+        app:layout_constraintVertical_weight="0.14">
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -46,7 +52,9 @@
         app:layout_constraintTop_toBottomOf="@+id/variation_music"
         app:layout_constraintBottom_toTopOf="@+id/collaboration_text"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent">
+        app:layout_constraintRight_toRightOf="parent"
+
+        app:layout_constraintVertical_weight="0.14">
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -62,7 +70,26 @@
         app:layout_constraintBottom_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+
+        app:layout_constraintVertical_weight="0.14">
+
     </TextView>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:id="@+id/collaborationlist"
+        android:background="#FFFFFF"
+        app:layout_constraintTop_toBottomOf="@+id/collaboration_text"
+        app:layout_constraintBottom_toTopOf="@+id/menu_bar"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+
+        app:layout_constraintVertical_weight="0.14"
+        >
+    </androidx.recyclerview.widget.RecyclerView>
 
 
 
@@ -72,7 +99,7 @@
         android:id="@+id/menu_bar"
         android:background="@color/graygreen"
         android:layout_alignParentBottom="true"
-        app:layout_constraintTop_toBottomOf="@+id/layout_popular"
+        app:layout_constraintTop_toBottomOf="@+id/collaborationlist"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
