--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="graygreen">#DEE5E0</color>
     <color name="maingreen">#85BD71</color>
     <color name="mainblack">#464646</color>
+    <color name="bg_color">#F7FFF0</color>
 </resources>
