--- a/app/src/main/res/layout/homemain.xml
+++ b/app/src/main/res/layout/homemain.xml
@@ -82,26 +82,29 @@
 
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:text="인기 순위"
-            android:textSize="12sp"
+            android:textSize="15sp"
             android:textStyle="bold"
             android:gravity="center"
             android:id="@+id/popular_title"
             app:layout_constraintTop_toTopOf="@+id/layout_popular"
             app:layout_constraintBottom_toTopOf="@+id/popularlist"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"/>
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintVertical_weight="0.1"/>
         
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
+
+            app:layout_constraintVertical_weight="0.8"
             android:id="@+id/popularlist"
             android:background="#FFFFFF"
             app:layout_constraintTop_toBottomOf="@+id/popular_title"
-            app:layout_constraintBottom_toTopOf="@+id/layout_popular"
+            app:layout_constraintBottom_toBottomOf="@+id/layout_popular"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent">
         </androidx.recyclerview.widget.RecyclerView>
