--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="maingreen">#85BD71</color>
     <color name="mainblack">#464646</color>
     <color name="bg_color">#F7FFF0</color>
+    <color name="gray_sto">#BDBDBD</color>
 </resources>
