--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="graygreen">#DEE5E0</color>
     <color name="maingreen">#85BD71</color>
     <color name="mainblack">#464646</color>
-    <color name="bg_color">#F7FFF0</color>
+    <color name="bg_color">#DEE5E0</color>
     <color name="gray_sto">#BDBDBD</color>
+    <color name="btn_color">#85BD71</color>
 </resources>
