--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -11,46 +11,113 @@
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:text="DAILY BAND"
         android:textStyle="bold"
-        android:textSize="20sp"
+        android:textSize="35sp"
+        android:textColor="#000000"
         android:id="@+id/dailyband_logo"
         android:gravity="center"
+        android:layout_marginTop="70dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/img_layout"
         />
-    <TextView
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:text="나만의 음악을 만들어보세요"
-        android:textStyle="bold"
-        android:textSize="20sp"
-        android:id="@+id/info_text"
-        android:gravity="center"
+        android:layout_height="wrap_content"
+        android:id="@+id/img_layout"
+        android:layout_marginTop="100dp"
+        app:layout_constraintBottom_toTopOf="@id/btn_layout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/dailyband_logo"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        />
+        >
 
-    <Button
-        android:id="@+id/register_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="회원가입하기"
-        app:layout_constraintBottom_toTopOf="@id/login_btn"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"/>
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/bird_img"
+            android:layout_width="400dp"
+            android:layout_height="250dp"
+            android:src="@drawable/start_page_bird"
+            app:civ_border_color="#000000"
+            app:civ_border_overlay="true"
+            app:civ_border_width="0dp"
+            app:layout_constraintBottom_toTopof="@id/info_text"
+            app:layout_constraintStart_toStartOf="@id/img_layout"
+            app:layout_constraintEnd_toEndof="@id/img_layout"
+            app:layout_constraintTop_toTopOf="@id/img_layout"
 
-    <Button
-        android:id="@+id/login_btn"
-        android:layout_width="wrap_content"
+            />
+
+        <TextView
+            android:id="@+id/info_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="나만의 음악을 만들어보세요"
+            android:textColor="#A6000000"
+            android:textSize="12sp"
+            android:textStyle="bold"
+
+            app:layout_constraintBottom_toBottomof="@id/img_layout"
+            app:layout_constraintStart_toStartOf="@id/img_layout"
+            app:layout_constraintEnd_toEndof="@id/img_layout"
+            app:layout_constraintTop_toBottomOf="@id/bird_img"
+
+            />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="로그인하기"
+        android:id="@+id/btn_layout"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        >
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/register_btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/round_button"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:text="회원가입하기"
+            android:textSize="15sp"
+            android:letterSpacing="0.3"
+            android:textColor="#FFFFFF"
+            app:layout_constraintTop_toTopOf="@id/btn_layout"
+            app:layout_constraintBottom_toTopOf="@id/register_btn"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/login_btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/round_button"
+            android:text="로그인하기"
+            android:textColor="#FFFFFF"
+            android:textSize="15sp"
+            android:letterSpacing="0.3"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="50dp"
+            app:layout_constraintTop_toBottomOf="@id/register_btn"
+            app:layout_constraintBottom_toBottomOf="@id/btn_layout"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            />
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 
     <ImageView
         android:id="@+id/imageView"
@@ -60,7 +127,6 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginBottom="-50dp"
-
         />
 
 
