--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -44,11 +44,10 @@
             app:civ_border_color="#000000"
             app:civ_border_overlay="true"
             app:civ_border_width="0dp"
-            app:layout_constraintBottom_toTopof="@id/info_text"
-            app:layout_constraintStart_toStartOf="@id/img_layout"
-            app:layout_constraintEnd_toEndof="@id/img_layout"
-            app:layout_constraintTop_toTopOf="@id/img_layout"
-
+            app:layout_constraintBottom_toTopOf="@id/info_text"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             />
 
         <TextView
@@ -60,10 +59,9 @@
             android:textColor="#A6000000"
             android:textSize="12sp"
             android:textStyle="bold"
-
-            app:layout_constraintBottom_toBottomof="@id/img_layout"
-            app:layout_constraintStart_toStartOf="@id/img_layout"
-            app:layout_constraintEnd_toEndof="@id/img_layout"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/bird_img"
 
             />
