--- a/app/src/main/res/drawable/round_rectangular.xml
+++ b/app/src/main/res/drawable/round_rectangular.xml
@@ -9,19 +9,19 @@
                 android:color="@color/black"
                 android:width="1dp"/>
             <corners
-                android:radius="50dp"/>
+                android:radius="12dp"/>
         </shape>
     </item>
 
     <item>
         <shape>
             <solid
-                android:color="#FFFFFF"/>
+                android:color="@color/btn_color"/>
             <stroke
                 android:color="@color/gray_sto"
                 android:width="1dp"/>
             <corners
-                android:radius="50dp"/>
+                android:radius="12dp"/>
         </shape>
     </item>
 
