--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -29,7 +29,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/img_layout"
-        android:layout_marginTop="100dp"
+        android:layout_marginBottom="20dp"
         app:layout_constraintBottom_toTopOf="@id/btn_layout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -57,7 +57,7 @@
             android:gravity="center"
             android:text="나만의 음악을 만들어보세요"
             android:textColor="#A6000000"
-            android:textSize="12sp"
+            android:textSize="14sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -81,9 +81,9 @@
             android:id="@+id/register_btn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/round_button"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
+            android:background="@drawable/round_rectangular"
+            android:layout_marginStart="40dp"
+            android:layout_marginEnd="40dp"
             android:text="회원가입하기"
             android:textSize="15sp"
             android:letterSpacing="0.3"
@@ -98,13 +98,13 @@
             android:id="@+id/login_btn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/round_button"
+            android:background="@drawable/round_rectangular"
             android:text="로그인하기"
             android:textColor="#FFFFFF"
             android:textSize="15sp"
             android:letterSpacing="0.3"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
+            android:layout_marginStart="40dp"
+            android:layout_marginEnd="40dp"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="50dp"
             app:layout_constraintTop_toBottomOf="@id/register_btn"
@@ -118,13 +118,34 @@
 
 
     <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="129dp"
-        android:layout_height="100dp"
+        android:id="@+id/top_circle"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         app:srcCompat="@drawable/background_twocircle"
         app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/blank_text1"
+
+        />
+
+    <TextView
+        android:id="@+id/blank_text1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=""
+        android:textSize="30dp"
+        android:layout_marginTop="100dp"
+        android:layout_marginLeft="150dp"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginBottom="-50dp"
+        app:layout_constraintStart_toStartOf="parent"
+
+        />
+    <ImageView
+        android:id="@+id/left_circle"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        app:srcCompat="@drawable/background_leftcircle"
+        app:layout_constraintRight_toLeftOf="@id/blank_text1"
+        app:layout_constraintTop_toTopOf="parent"
         />
 
 
