--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,7 +3,6 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
 
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/bg_color"
@@ -21,42 +20,60 @@
         >
 
         <TextView
+            android:id="@+id/dailyband_logo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="DAILY BAND"
-            android:textStyle="bold"
-            android:textSize="35sp"
-            android:textColor="#000000"
-            android:id="@+id/dailyband_logo"
             android:gravity="center"
-            app:layout_constraintTop_toTopOf="parent"
+            android:text="DAILY BAND"
+            android:textColor="#000000"
+            android:textSize="35sp"
+            android:textStyle="bold"
+            app:layout_constraintVertical_chainStyle="packed"
+            app:layout_constraintBottom_toTopOf="@id/welcome_text"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/welcome_text"
+            app:layout_constraintTop_toTopOf="parent"
             />
+
         <TextView
             android:id="@+id/welcome_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="WELCOME"
+            android:text="WELCOME BACK"
             android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintTop_toBottomOf="@id/dailyband_logo"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/info_text"/>
+            app:layout_constraintBottom_toTopOf="@id/bird_img"/>
 
-        <TextView
-            android:id="@+id/info_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="아래의 정보를 입력해주세요"
-            android:textSize="15sp"
-            app:layout_constraintTop_toBottomOf="@id/welcome_text"
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/bird_img"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:src="@drawable/brid_second_img"
+            app:civ_border_color="#000000"
+            app:civ_border_overlay="true"
+            app:civ_border_width="0dp"
+            app:layout_constraintTop_toBottomOf="@+id/welcome_text"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintBottom_toTopOf="@id/make_music_text"
+            />
+
+        <TextView
+            android:id="@+id/make_music_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="나만의 음악을 만들어보세요"
+            app:layout_constraintTop_toBottomOf="@+id/bird_img"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -65,18 +82,25 @@
         app:layout_constraintTop_toBottomOf="@id/info_layout"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/btn_layout"
 
         >
 
         <EditText
             android:id="@+id/email_edittext"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
             android:hint="이메일"
             android:background="@drawable/round_button"
             android:inputType="textEmailAddress"
+            android:layout_marginBottom="10dp"
+            android:textSize="15sp"
+            android:paddingStart="20sp"
+            android:paddingTop="10sp"
+            android:paddingBottom="10sp"
+            android:layout_marginStart="50dp"
+            android:layout_marginEnd="50dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -86,12 +110,20 @@
 
         <EditText
             android:id="@+id/password_edittext"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
             android:hint="비밀번호"
             android:background="@drawable/round_button"
             android:inputType="textPassword"
+            android:layout_marginBottom="20dp"
+            android:textSize="15sp"
+            android:paddingStart="20sp"
+            android:paddingTop="10sp"
+            android:paddingBottom="10sp"
+            android:layout_marginStart="50dp"
+            android:layout_marginEnd="50dp"
+
             app:layout_constraintTop_toBottomOf="@id/email_edittext"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -99,31 +131,76 @@
             />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/login_btn"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="로그인하기"
-        android:background="@drawable/round_rectangular"
-        android:layout_marginStart="40dp"
-        android:layout_marginEnd="40dp"
-        android:layout_marginBottom="60dp"
-        android:textSize="15sp"
-        android:letterSpacing="0.3"
-        android:textColor="#FFFFFF"
+        android:id="@+id/btn_layout"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/gotoregister_btn"
-        app:layout_constraintStart_toStartOf="parent"
-        />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        >
 
-    <Button
-        android:id="@+id/gotoregister_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="48dp"
-        android:text="회원가입하러 가기"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/login_btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="로그인하기"
+            android:background="@drawable/round_rectangular"
+            android:layout_marginStart="40dp"
+            android:layout_marginEnd="40dp"
+            android:layout_marginBottom="60dp"
+            android:textSize="15sp"
+            android:letterSpacing="0.3"
+            android:textColor="#FFFFFF"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            />
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            app:layout_constraintTop_toBottomOf="@id/login_btn"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            >
+
+            <TextView
+                android:id="@+id/ask_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="계정이 없으신가요?"
+                android:layout_marginEnd="4dp"
+                app:layout_constraintHorizontal_chainStyle="packed"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/gotoregister_btn"
+                />
+
+            <TextView
+                android:id="@+id/gotoregister_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="4dp"
+                android:text="회원가입하기"
+                android:clickable="true"
+                android:textStyle="bold"
+                android:textColor="#66875B"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toEndOf="@id/ask_text"
+                app:layout_constraintEnd_toEndOf="parent"
+                />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
 
     <ImageView
         android:id="@+id/top_circle"
@@ -145,8 +222,8 @@
         android:layout_marginLeft="150dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-
         />
+
     <ImageView
         android:id="@+id/left_circle"
         android:layout_width="200dp"
@@ -155,22 +232,5 @@
         app:layout_constraintRight_toLeftOf="@id/blank_text1"
         app:layout_constraintTop_toTopOf="parent"
         />
-
-    <TextView
-        android:id="@+id/ask_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="계정이 이미 있으신가요?"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        />
-
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="로그인하기"
-        tools:layout_editor_absoluteX="155dp"
-        tools:layout_editor_absoluteY="696dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
