--- a/app/src/main/res/layout/homemain.xml
+++ b/app/src/main/res/layout/homemain.xml
@@ -31,21 +31,21 @@
 
 
         <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/circle_iv"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:id="@+id/circle_iv"
+            android:paddingTop="20dp"
+            android:paddingBottom="10dp"
+            android:src="@drawable/brid_second_img"
+            app:civ_border_color="#000000"
             app:civ_border_overlay="true"
             app:civ_border_width="0dp"
-            app:civ_border_color="#000000"
-            android:src="@drawable/basic_img"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toTopOf="@+id/username"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintVertical_weight="0.8"
-            android:paddingBottom="10dp"
-            android:paddingTop="20dp"
-            />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_weight="0.8" />
 
         <TextView
             android:layout_width="match_parent"
