--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
 
+    android:id="@+id/background_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/bg_color"
@@ -12,6 +13,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/info_layout"
+        app:layout_constraintVertical_chainStyle="packed"
+        android:layout_marginBottom="50dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -25,6 +28,8 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="DAILY BAND"
+            android:layout_marginBottom="20dp"
+            android:letterSpacing="0.08"
             android:textColor="#000000"
             android:textSize="35sp"
             android:textStyle="bold"
@@ -40,6 +45,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="WELCOME BACK"
+            android:layout_marginBottom="20dp"
+            android:letterSpacing="0.07"
             android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintTop_toBottomOf="@id/dailyband_logo"
@@ -66,6 +73,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="나만의 음악을 만들어보세요"
+            android:letterSpacing="0.05"
+            android:layout_marginTop="10dp"
             app:layout_constraintTop_toBottomOf="@+id/bird_img"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -82,7 +91,8 @@
         app:layout_constraintTop_toBottomOf="@id/info_layout"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/btn_layout"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="10dp"
 
         >
 
@@ -94,7 +104,7 @@
             android:hint="이메일"
             android:background="@drawable/round_button"
             android:inputType="textEmailAddress"
-            android:layout_marginBottom="10dp"
+            android:layout_marginBottom="20dp"
             android:textSize="15sp"
             android:paddingStart="20sp"
             android:paddingTop="10sp"
