--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,6 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
 
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/background_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/bg_color"
@@ -13,6 +14,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/info_layout"
+        android:layout_marginBottom="20dp"
+        app:layout_constraintVertical_chainStyle="packed"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -25,6 +28,8 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="DAILY BAND"
+            android:layout_marginBottom="20dp"
+            android:letterSpacing="0.08"
             android:textColor="#000000"
             android:textSize="35sp"
             android:textStyle="bold"
@@ -39,6 +44,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="WELCOME"
+            android:layout_marginBottom="20dp"
+            android:letterSpacing="0.07"
             android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintTop_toBottomOf="@id/dailyband_logo"
@@ -51,6 +58,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="아래의 정보를 입력해주세요"
+            android:letterSpacing="0.05"
             android:textSize="15sp"
             android:textStyle="normal"
             app:layout_constraintTop_toBottomOf="@id/welcome_text"
@@ -65,7 +73,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/edittext_layout"
-        android:paddingBottom="50dp"
+        android:paddingBottom="10dp"
+        android:layout_marginTop="30dp"
         app:layout_constraintTop_toBottomOf="@id/info_layout"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -81,7 +90,7 @@
 
             android:background="@drawable/round_button"
             android:inputType="text"
-            android:layout_marginBottom="10dp"
+            android:layout_marginBottom="20dp"
             android:paddingStart="20sp"
             android:paddingTop="10sp"
             android:paddingBottom="10sp"
@@ -102,7 +111,7 @@
 
             android:background="@drawable/round_button"
             android:inputType="textEmailAddress"
-            android:layout_marginBottom="10dp"
+            android:layout_marginBottom="20dp"
             android:paddingStart="20sp"
             android:paddingTop="10sp"
             android:paddingBottom="10sp"
@@ -143,13 +152,12 @@
             android:textSize="15sp"
             android:background="@drawable/round_button"
             android:inputType="textPassword"
-            android:layout_marginBottom="10dp"
             android:paddingStart="20sp"
             android:paddingTop="10sp"
             android:paddingBottom="10sp"
             android:layout_marginStart="50dp"
             android:layout_marginEnd="50dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="20dp"
             app:layout_constraintTop_toBottomOf="@id/password_edittext"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
