--- a/app/src/main/res/layout/pickmusic.xml
+++ b/app/src/main/res/layout/pickmusic.xml
@@ -31,30 +31,36 @@
 
         <ImageView
             android:id="@+id/backcontext"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:src="@drawable/back_arrow"
+            app:layout_constraintHorizontal_weight="0.1"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toLeftOf="@+id/pick_songname"
             app:layout_constraintLeft_toLeftOf="parent"/>
 
         <TextView
-            android:id="@+id/pickuser"
-            android:layout_width="wrap_content"
+            android:id="@+id/pick_songname"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="user_name"
+            app:layout_constraintHorizontal_weight="0.8"
+            android:text="pick_songname"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:textStyle="bold"
             android:textSize="25sp"
             app:layout_constraintLeft_toRightOf="@+id/backcontext"
-            android:layout_marginStart="15dp"
+            app:layout_constraintRight_toLeftOf="@+id/optionmenu"
+            android:layout_marginStart="10dp"
             />
 
         <ImageView
             android:id="@+id/optionmenu"
-            android:layout_width="wrap_content"
+            app:layout_constraintLeft_toRightOf="@+id/pick_songname"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            app:layout_constraintHorizontal_weight="0.15"
             android:src="@drawable/optionmenu"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -176,9 +182,9 @@
 
         <ImageView
             android:id="@+id/heartbtn"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:src="@drawable/heart_outline"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:src="@drawable/empty_heart"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -188,9 +194,9 @@
 
         <ImageView
             android:id="@+id/chatbtn"
-            android:layout_width="29dp"
-            android:layout_height="29dp"
-            android:src="@drawable/chat"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/good_chat"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toRightOf="@+id/heartbtn"
@@ -200,9 +206,9 @@
 
         <ImageView
             android:id="@+id/downloadbtn"
-            android:layout_width="29dp"
-            android:layout_height="29dp"
-            android:src="@drawable/downloadbtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/downbtn"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toRightOf="@+id/chatbtn"
@@ -234,7 +240,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:id="@+id/collaborationlist"
-        android:background="#FFFFFF"
+        android:background="@drawable/recycle_background"
         app:layout_constraintTop_toBottomOf="@+id/collaboration_text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
