피아노 구현까지 완료 녹음 버튼, 녹음해서 파일 새로 올리는것까지해야함

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,5 +15,5 @@
     <color name="gray_sto">#BDBDBD</color>
     <color name="btn_color">#85BD71</color>
     <color name="primarydark_color">#7BB068</color>
-
+    <color name="beige_color">#f5f5dc</color>
 </resources>
